# JucyAndroid

./: .gitignore  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: IAudioSource.h  LogUtils.h  SampleAudioSource.cpp  SampleAudioSource.h  SynthAudioSource.cpp  SynthAudioSource.h  SynthPlayer.cpp  SynthPlayer.h  jni-bridge.cpp
app/src/main/java/personal/vankhulup/synthbridge/: DrumpadView.kt  MainActivity.kt
app/src/main/java/personal/vankhulup/synthbridge/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
